# ktp-kded-module

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  Messages.sh  account-status-helper.cpp  account-status-helper.h  autoaway.cpp  autoaway.h  autoconnect.cpp  autoconnect.h  contact-cache.cpp  contact-cache.h  contact-request-handler.cpp  contact-request-handler.h  contactnotify.cpp  contactnotify.h  error-handler.cpp  error-handler.h  global-presence.cpp  global-presence.h  kded_ktp_integration_module.desktop  ktp_integration_module.desktop  ktp_kded_debug.cpp  ktp_kded_debug.h  org.freedesktop.Telepathy.Client.KTp.KdedIntegrationModule.service.in  screensaveraway.cpp  screensaveraway.h  status-handler.cpp  status-handler.h  status-message-parser.cpp  status-message-parser.h  telepathy-kded-module-plugin.cpp  telepathy-kded-module-plugin.h  telepathy-kded-module.kdev4  telepathy-module.cpp  telepathy-module.h  telepathy-mpris.cpp  telepathy-mpris.h  telepathy_kded_module.desktop
config/: CMakeLists.txt  column-resizer.cpp  column-resizer.h  kcm_ktp_integration_module.desktop  kcm_telepathy_kded_module_config.desktop  nowplaying-lineedit.cpp  nowplaying-lineedit.h  nowplaying-listwidget.cpp  nowplaying-listwidget.h  telepathy-kded-config.cpp  telepathy-kded-config.h  telepathy-kded-config.ui
po/ar/: kded_ktp_integration_module.po
po/bs/: kded_ktp_integration_module.po
po/ca/: kded_ktp_integration_module.po
po/ca@valencia/: kded_ktp_integration_module.po
po/cs/: kded_ktp_integration_module.po
po/da/: kded_ktp_integration_module.po
po/de/: kded_ktp_integration_module.po
po/el/: kded_ktp_integration_module.po
po/en_GB/: kded_ktp_integration_module.po
po/es/: kded_ktp_integration_module.po
po/et/: kded_ktp_integration_module.po
po/eu/: kded_ktp_integration_module.po
po/fi/: kded_ktp_integration_module.po
po/fr/: kded_ktp_integration_module.po
po/ga/: kded_ktp_integration_module.po
po/gl/: kded_ktp_integration_module.po
po/hu/: kded_ktp_integration_module.po
po/ia/: kded_ktp_integration_module.po
po/it/: kded_ktp_integration_module.po
po/ja/: kded_ktp_integration_module.po
po/ka/: kded_ktp_integration_module.po
po/kk/: kded_ktp_integration_module.po
po/km/: kded_ktp_integration_module.po
po/ko/: kded_ktp_integration_module.po
po/lt/: kded_ktp_integration_module.po
po/mr/: kded_ktp_integration_module.po
po/nb/: kded_ktp_integration_module.po
po/nds/: kded_ktp_integration_module.po
po/nl/: kded_ktp_integration_module.po
po/nn/: kded_ktp_integration_module.po
po/pa/: kded_ktp_integration_module.po
po/pl/: kded_ktp_integration_module.po
po/pt/: kded_ktp_integration_module.po
po/pt_BR/: kded_ktp_integration_module.po
po/ro/: kded_ktp_integration_module.po
po/ru/: kded_ktp_integration_module.po
po/sk/: kded_ktp_integration_module.po
po/sl/: kded_ktp_integration_module.po
po/sr/: kded_ktp_integration_module.po
po/sr@ijekavian/: kded_ktp_integration_module.po
po/sr@ijekavianlatin/: kded_ktp_integration_module.po
po/sr@latin/: kded_ktp_integration_module.po
po/sv/: kded_ktp_integration_module.po
po/tr/: kded_ktp_integration_module.po
po/ug/: kded_ktp_integration_module.po
po/uk/: kded_ktp_integration_module.po
po/zh_CN/: kded_ktp_integration_module.po
po/zh_TW/: kded_ktp_integration_module.po
tests/: CMakeLists.txt  contact-cache-main.cpp  status-handling-main.cpp  status-message-parser.cpp
